updating the verification

--- a/templates/Reset_password_email.html
+++ b/templates/Reset_password_email.html
@@ -3,7 +3,7 @@
 Hii {{user.first_name}},
 
 Please click the below link to reset your password.
-http://127.0.0.1:8000/{% url 'resetPassword_validate' uidb64=uid token=token %}
+https://farm-community.onrender.com{% url 'resetPassword_validate' uidb64=uid token=token %}
 
 If its not you, please ignore this mail.
 
