--- a/templates/account_verify_email.html
+++ b/templates/account_verify_email.html
@@ -4,7 +4,7 @@ Hii {{user.username}},
 
 Please click on below link to confirm your registration.
 
-http://127.0.0.1:8000{% url 'activate' uidb64=uid token=token %}
+https://farm-community.onrender.com{% url 'activate' uidb64=uid token=token %}
 
 If its not you, please ignore this mail.
 
